--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -23,3 +23,4 @@ steps:
     jdkVersionOption: '1.8'
     jdkArchitectureOption: 'x64'
     goals: 'clean install'
+    vstsMavenAccessToken: 6aehs7zl2f4ew2osm7jdx6y3yuykmvtaeg7d4x742m3h3hcgrpmq
