Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,5 +1,4 @@
 # Maven
-
 # Build your Java project and run tests with Apache Maven.
 # Add steps that analyze code, save build artifacts, deploy, and more:
 # https://docs.microsoft.com/azure/devops/pipelines/languages/java
@@ -11,6 +10,9 @@ pool:
   vmImage: ubuntu-latest
 
 steps:
+- task: MavenAuthenticate@0
+  inputs:
+    artifactsFeeds: 'test-artifactory'
 - task: Maven@3
   inputs:
     mavenPomFile: 'Application/pom.xml'
@@ -20,4 +22,3 @@ steps:
     jdkArchitectureOption: 'x64'
     goals: 'deploy'
     mavenAuthenticateFeed: true
-    
